--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -16,3 +16,192 @@
 @import url('./badges.css');
 @import url('./back-link.css');
 @import url('./footer.css');
+
+body {
+  font-family: 'Inter', sans-serif;
+  background-color: #f5f5f5;
+  padding: 40px 20px;
+  margin: 0;
+  color: #2e2f42;
+}
+
+input#datetime-picker {
+  padding: 10px 16px;
+  font-size: 16px;
+  border: 1px solid #808080;
+  border-radius: 4px;
+  margin-right: 16px;
+  width: 250px;
+  outline: none;
+  transition: border-color 0.3s;
+}
+
+input#datetime-picker:disabled {
+  background: #f5f5f5;
+  border: 1px solid #808080;
+  color: #808080;
+}
+
+input#datetime-picker:hover {
+  border: 1px solid #000;
+}
+
+input#datetime-picker:focus {
+  border: 1px solid #4e75ff;
+
+}
+
+button[data-start] {
+  padding: 10px 24px;
+  font-size: 16px;
+  background-color: #4e75ff;
+  color: #fff;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+  transition: background-color 0.3s;
+}
+
+button[data-start]:hover:enabled,
+button[data-start]:focus:enabled {
+  background-color: #6c8cff;
+}
+
+button[data-start]:disabled {
+  background-color: #cfcfcf;
+  color: #989898;
+  cursor: not-allowed;
+}
+
+.timer {
+  margin-top: 32px;
+  display: flex;
+  gap: 24px;
+  justify-content: center;
+  flex-wrap: wrap;
+}
+
+.field {
+  display: inline-flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 16px;
+  border-radius: 8px;
+
+}
+
+.value {
+  font-size: 32px;
+  font-weight: 600;
+  color: #2e2f42;
+  margin-bottom: 4px;
+}
+
+.label {
+  font-size: 12px;
+  color: #2e2f42;
+  text-transform: uppercase;
+  letter-spacing: 1px;
+}
+
+
+/* === СТИЛІ ФОРМИ === */
+.form {
+  background-color: #ffffff;
+  padding: 32px;
+  border-radius: 8px;
+  max-width: 400px;
+  margin: 20px auto;
+  width: 100%;
+  box-shadow: 0px 4px 12px rgba(46, 47, 66, 0.08);
+  display: flex;
+  flex-direction: column;
+  gap: 24px;
+}
+
+/* === ПОЛЕ ВВОДУ DELAY === */
+.form label {
+  display: flex;
+
+  font-size: 14px;
+  font-weight: 500;
+  color: #2e2f42;
+  gap: 8px;
+
+
+}
+
+
+
+.form input[type="number"] {
+  padding: 10px 16px;
+  border: 1px solid #808080;
+  ;
+  border-radius: 4px;
+  font-size: 16px;
+  outline: none;
+  transition: border-color 0.3s;
+}
+
+.form input[type="number"]:focus {
+  border-color: #404bbf;
+  box-shadow: 0 0 0 2px rgba(64, 75, 191, 0.2);
+}
+
+/* === FIELDSET СТАНУ === */
+fieldset {
+  border: none;
+  padding: 0;
+  display: flex;
+  gap: 48px;
+  justify-content: center;
+  border: 1px solid #808080;
+  ;
+  border-radius: 4px;
+}
+
+legend {
+  font-weight: 400;
+  color: #2e2f42;
+  margin-bottom: 8px;
+  text-align: left;
+
+}
+
+fieldset label {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  gap: 8px;
+  font-size: 14px;
+}
+
+/* === КНОПКА === */
+button[type="submit"] {
+  padding: 12px 24px;
+  background-color: #4e75ff;
+  color: #ffffff;
+  border: none;
+  border-radius: 8px;
+  font-size: 16px;
+  font-weight: 500;
+  cursor: pointer;
+  transition: background-color 0.3s;
+  align-self: flex-start;
+  width: 100%;
+}
+
+button[type="submit"]:hover,
+button[type="submit"]:focus {
+  background-color: #404bbf;
+}
+
+.rd {
+  display: flex;
+  flex-direction: column;
+  text-align: left;
+}
+
+.container {
+  margin-bottom: 20px;
+}
